Fixing box textarea jumping to top left

--- a/src/App.css
+++ b/src/App.css
@@ -684,7 +684,7 @@ button,
   background-color: transparent;
   font-family: sans-serif;
   width: 100%;
-  height: 80%;
+  height: 90%;
   z-index: 101;
   overflow-x: hidden;
   overflow-y: auto;
